--- a/basic-server/src/main/resources/application-dev.yml
+++ b/basic-server/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8888
+  port: 5768
   servlet:
     session:
       timeout: 10s
@@ -12,9 +12,9 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://192.168.161.3:3306/devicedb?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: device
-    password: 4rfv$RFV
+    url: jdbc:mysql://127.0.0.1:3306/bootsecurity?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: 876543
     driver-class-name: com.mysql.jdbc.Driver
   freemarker:
     cache: false # 缓存配置 开发阶段应该配置为false 因为经常会改
